# Selarepa

./: .gitignore  NOTE.md  README.md  download.py  eval_completeness.py  example_use_khaanh.py  generate_docstrings.py  main.py  pyproject.toml  requirements.txt  run.sh  run_web_ui.py  self_label_repair.py  setup.py  test_image_processing_khaanh.py  tranvantuan.sh  yolo_inference_with_cam360_dataset.py
archives/foundation_agents/: NOTE.md  README.md
archives/khaanh_edge/: conversation.py  utils.py
config/: README.md  agent_config.yaml  example_config.yaml
configs/: agent_config.yaml
datasets/Cam360/: README.md
docs/: bình-tĩnh-khi-bị-giao-task-ảo-tưởng.md  tuyên-ngôn-công-việc.md
docs/chatgpt/: AI-Native-6G.md  chỉ-ra-luận-điểm-dinh-dưỡng-agent.md  deque-&-heapq.md  quy-trình-vận-hành-trung-tâm-NOC_MOC.md.md  so-sánh-algo-với-code.md  so-sánh-khác-nhau-2-bài-báo.md  từ-khóa-liên-quan.md
documents/chatgpt/: bao-cáo-tuần-may15.md  cách-tìm-tài-liệu-6G.md  ứng-tuyển-RA.md
evals/: README.md
examples/: example_cognition_usage.py  example_perception_usage.py  izuchat.py
lib/khaanh/: added_tokens.json  config.json  image_processing_khaanh.py  modeling_navit_siglip.py  preprocessor_config.json  resampler.py
lib/llm_core/: factory.py
notebooks/: khaanh_plot.ipynb  plots.ipynb  train_yolo11.ipynb
notes/chatgpt/: cam360-check-giám-sát-người.md  câu-hỏi-ngược.md  keyword-6G.md  so-sánh-perception-cognition.md  so-sánh-zero_torch-ai_native_6g.md
src/: __init__.py  configuration_khaanh.py  data.yaml  example_usage.py  image_processing_khaanh.py  main.py  modeling_khaanh.py  modeling_navit_siglip.py  preprocessor_config.json  processing_khaanh.py  self_label_repair.py  utils.py  yolo_inference_with_cam360_dataset.py
src/agent/: README.md  actuator.py  attention.py  base.py  cognition.py  example_usage.py  foundation_agent.py  foundation_agents.py  (+8 more)
(+79 files in other folders)
