[project]
name = "khaanh"
version = "0.1.0"
description = "Method and device for foundation agents"
authors = [
    { name = "Tran Van Tuan", email = "trantuan22052k@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"