[project]
name = "khaanh"
version = "0.1.0"
description = "Method and device for foundation agents"
authors = [
    { name = "Tran Van Tuan", email = "trantuan22052k@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools.package-dir]
# Tất cả modules/package mặc định đều nằm dưới lib/
"" = "lib"

[tool.setuptools.packages.find]
# Chỉ tìm package trong lib/
where = ["lib"]
# (Tùy chọn) chỉ include các package llm_core nếu bạn không muốn publish thêm module khác
include = ["llm_core*", "omnilmm*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
